--- a/src/styles/AboutOne.scss
+++ b/src/styles/AboutOne.scss
@@ -2,115 +2,205 @@
 @import './Global.scss';
 
 .About-one {
-    @extend %universal-component-layout;
-}
+    .About-one {
+        @extend %universal-component-layout;
+    }
 
-$scale-size: 30%;
-$edge-distance: 5%;
-$text-area-width: 28.8125rem;
-$text-right: 50%;
-$text-top: 20%;
-$text-botton: 60%;
-$solution-text-right: 50%;
+    $scale-size: 30%;
+    $edge-distance: 5%;
+    $text-area-width: 28.8125rem;
+    $text-right: 50%;
+    $text-top: 20%;
+    $text-botton: 60%;
+    $solution-text-right: 50%;
 
-.aboutone-title {
-    color: #ffffff !important;
-    text-decoration: underline;
-    z-index: 1;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 2.5rem;
-    position: fixed;
-    display: inline-block;
-    top: 2rem;
-    right: $text-right;
-}
+    .row::after {
+        clear: both;
+        display: flex;
+        text-align: center;
+        margin: 0;
+        padding: 0;
+        justify-content: center;
+        align-content: center;
+        flex-direction: row;
+    }
 
-.background-parent {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    bottom: 0%;
-    left: 25%;
-    /* Negative half of height. */
-    margin-left: -18%;
-}
+    .col-header {
+        float: left;
+        width: 100%;
+        text-align: center;
+        background-color: green;
+        height: 1rem;
+    }
 
-.west-coast-background {
-    background: url('../assets/about-background.svg');
-    background-size: contain;
-    background-repeat: no-repeat;
-    text-align: center;
-    align-self: center;
-    height: 100%;
-    width: auto;
-    bottom: 0%;
-    z-index: 1;
-    opacity: 0;
+    .col-1-top {
+        float: left;
+        width: 10%;
+        height: 1rem;
+        text-align: center;
+        background-color: red;
+    }
+
+    .col-2-top {
+        float: left;
+        width: calc(80%/3);
+        height: 1rem;
+        text-align: center;
+        background-color: palegreen;
+    }
+
+    .col-3-top {
+        float: left;
+        width: calc(80%/3);
+        height: 1rem;
+        text-align: center;
+        background-color: purple;
+    }
+
+    .col-4-top {
+        float: left;
+        width: calc(80%/3);
+        height: 1rem;
+        text-align: center;
+        background-color: fuchsia;
+    }
+
+    .col-5-top {
+        float: left;
+        width: 10%;
+        height: 1rem;
+        text-align: center;
+        background-color: navajowhite;
+    }
+
+    .col-bottom {
+        float: left;
+        width: 100%;
+        height: 1rem;
+        text-align: center;
+        background-color: yellow;
+        align-content: center;
+    }
+
+    .aboutone-title {
+        color: #ffffff !important;
+        text-decoration: underline;
+        z-index: 1;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 2.5rem;
+        position: absolute;
+        display: inline-block;
+        top: 2rem;
+        left: 0;
+        right: 0;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .the-name-header {
+        font-size: 1.15rem;
+        line-height: 1.2;
+        color: rgb(255, 255, 255);
+        text-transform: uppercase;
+        z-index: 1;
+        font-weight: 400;
+        font-style: normal;
+        position: absolute;
+        display: inline-block;
+        left: 0;
+        right: 0;
+        margin-left: auto;
+        margin-right: auto;
+        top: 6rem;
+    }
+/*
+    .background-parent {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+    }*/
+
+    .west-coast-background {
+        background: url('../assets/about-background.svg');
+        background-size: contain;
+        background-repeat: no-repeat;
+        position: absolute;;
+        text-align: center;
+        align-self: center;
+        bottom: 0rem;
+        height: 100%;
+        width:80%;
+        z-index: 1;
+        opacity: 0;
+        left: 0;
+        right: 0;
+        margin-left: auto;
+        margin-right: auto;
+
+    }
+
+    .vertical-text {
+        font-size: 1.125rem;
+        color: rgb(255, 255, 255);
+        text-transform: uppercase;
+        line-height: 1.2;
+        text-align: left;
+        vertical-align: middle;
+        position: absolute;
+        width: auto;
+        top: 5rem;
+        right: 14rem;
+        z-index: 30;
+        writing-mode: vertical-rl;
+        text-orientation: upright;
+        cursor: auto;
+    }
+
+    .the-description-text-about-one-higher {
+        font-size: 1rem;
+        color: rgb(255, 255, 255);
+        line-height: 1.2;
+        text-align: justify;
+        position: absolute;
+        width:inherit;
+        top: $text-top;
+        z-index: 99;
+    }
+
+    .the-description-text-about-one {
+        font-size: 1rem;
+        color: rgb(255, 255, 255);
+        line-height: 1.2;
+        text-align: justify;
+        position: absolute;
+        width: 70%;
+        left: 0;
+        right: 0;
+        margin-left: auto;
+        margin-right: auto;
+        bottom: 6rem;
+        z-index: 99;
+
+    }
+
+
+
+    .hidden-base-64-about {
+
+        transform: rotate(-90deg);
+        position: absolute;
+        top: 50%;
+        font-size: 0.8rem;
+        z-index: 90;
+    }
+@media screen and (max-height: 1030px) and (max-width: 1370px) {
     
 }
-
-.vertical-text {
-    font-size: 1.125rem;
-    color: rgb(255, 255, 255);
-    text-transform: uppercase;
-    line-height: 1.2;
-    text-align: right;
-    position: fixed;
-    width: $text-area-width;
-    right: $text-right - 30;
-    top: $text-top - 10;
-    z-index: 99;
-    padding-bottom: 2%;
-    writing-mode: vertical-rl;
-    text-orientation: upright;
-    cursor: none;
-}
-
-.the-name-header {
-    font-size: 1.125rem;
-    line-height: 1.2;
-    color: rgb(255, 255, 255);
-    text-transform: uppercase;
-    z-index: 1;
-    font-weight: 400;
-    font-style: normal;
-    position: fixed;
-    display: inline-block;
-    top: 6rem;
-    right: $text-right - 3.5;
-
-
-}
-
-.the-description-text-about-one {
-    font-size: 1rem;
-    color: rgb(255, 255, 255);
-    line-height: 1.2;
-    text-align: right;
-    position: fixed;
-    width: $text-area-width+20;
-    right: $text-right - 25;
-    bottom: 2%;
-    z-index: 99;
-}
-
-.the-description-text-about-one-higher {
-    font-size: 1rem;
-    color: rgb(255, 255, 255);
-    line-height: 1.2;
-    text-align: right;
-    position: fixed;
-    width: $text-area-width - 6;
-    right: $text-right + 18;
-    top: $text-top;
-    z-index: 99;
-}
-.hidden-base-64-about{
-    transform: rotate(-90deg);
-    position: fixed;
-    left: 14%;
-    top: 50%;
-    font-size: 0.8rem;
-    z-index: 90;
 }
