--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -92,6 +92,7 @@
     transform: rotate(-90deg);
     position: inherit;
     font-size: 0.8rem;
+    writing-mode: vertical-rl;
     cursor: vertical-text;
     margin-top: 20%;
   }
