--- a/src/styles/AboutOne.scss
+++ b/src/styles/AboutOne.scss
@@ -29,7 +29,6 @@
         float: left;
         width: 100%;
         text-align: center;
-        background-color: green;
         height: 1rem;
     }
 
@@ -38,7 +37,7 @@
         width: 10%;
         height: 1rem;
         text-align: center;
-        background-color: red;
+
     }
 
     .col-2-top {
@@ -46,7 +45,7 @@
         width: calc(80%/3);
         height: 1rem;
         text-align: center;
-        background-color: palegreen;
+
     }
 
     .col-3-top {
@@ -54,7 +53,7 @@
         width: calc(80%/3);
         height: 1rem;
         text-align: center;
-        background-color: purple;
+
     }
 
     .col-4-top {
@@ -62,7 +61,7 @@
         width: calc(80%/3);
         height: 1rem;
         text-align: center;
-        background-color: fuchsia;
+
     }
 
     .col-5-top {
@@ -70,7 +69,7 @@
         width: 10%;
         height: 1rem;
         text-align: center;
-        background-color: navajowhite;
+
     }
 
     .col-bottom {
@@ -78,7 +77,7 @@
         width: 100%;
         height: 1rem;
         text-align: center;
-        background-color: yellow;
+
         align-content: center;
     }
 
@@ -114,7 +113,8 @@
         margin-right: auto;
         top: 6rem;
     }
-/*
+
+    /*
     .background-parent {
         width: 100%;
         height: 100%;
@@ -131,12 +131,13 @@
         background: url('../assets/about-background.svg');
         background-size: contain;
         background-repeat: no-repeat;
-        position: absolute;;
+        position: absolute;
+        ;
         text-align: center;
         align-self: center;
-        bottom: 0rem;
+        top: 15rem;
         height: 100%;
-        width:80%;
+        width: 70%;
         z-index: 1;
         opacity: 0;
         left: 0;
@@ -169,7 +170,7 @@
         line-height: 1.2;
         text-align: justify;
         position: absolute;
-        width:inherit;
+        width: inherit;
         top: $text-top;
         z-index: 99;
     }
@@ -180,12 +181,12 @@
         line-height: 1.2;
         text-align: justify;
         position: absolute;
-        width: 70%;
+        width: 75%;
         left: 0;
         right: 0;
         margin-left: auto;
         margin-right: auto;
-        bottom: 6rem;
+        bottom: 20%;
         z-index: 99;
 
     }
@@ -200,7 +201,79 @@
         font-size: 0.8rem;
         z-index: 90;
     }
-@media screen and (max-height: 1030px) and (max-width: 1370px) {
-    
-}
+
+    @media screen and (max-width: 1000px) {
+        .col-1-top {
+            float: left;
+            width: 0%;
+            height: 1rem;
+            text-align: center;
+            background-color: red;
+        }
+
+        .col-2-top {
+            float: left;
+            width: 100%;
+            height: 1rem;
+            text-align: center;
+            background-color: palegreen;
+        }
+
+        .col-3-top {
+            float: left;
+            width: 100%;
+            height: 1rem;
+            text-align: center;
+            background-color: purple;
+        }
+
+        .col-4-top {
+            float: left;
+            width: 100%;
+            height: 1rem;
+            text-align: center;
+            background-color: fuchsia;
+        }
+
+        .col-5-top {
+            float: left;
+            width: 0%;
+            height: 1rem;
+            text-align: center;
+            background-color: navajowhite;
+        }
+
+        .the-description-text-about-one-higher {
+            width: 50%;
+            left: 0;
+            right: 0;
+            margin-left: auto;
+            margin-right: auto;
+
+        }
+
+        .vertical-text {
+            display: none;
+        }
+    }
+    @media screen and (min-height:900px) and (max-height: 1400px){
+        .west-coast-background{
+            top: 30rem;
+            height: 70%;
+            transform: scale(1.2);
+        }
+        .the-description-text-about-one{
+            width: 50%;
+        }
+    }
+    @media screen and (min-height:1401px) and (max-height: 1600px){
+        .west-coast-background{
+            top: 40rem;
+            height: 60%;
+            transform: scale(1.2);
+        }
+        .the-description-text-about-one{
+            width: 50%;
+        }
+    }
 }
