--- a/src/styles/AboutOne.scss
+++ b/src/styles/AboutOne.scss
@@ -272,7 +272,7 @@
             width: 50%;
         }
     }
-    /*Mobile Responsive CSS*/
+    /*Mobile Responsive CSS Large*/
     @media screen and (min-width: 376px) and (max-width: 426px) and (max-height: 860px) {
         .west-coast-background{
             top: 16rem;
@@ -283,4 +283,25 @@
             width: 60%;
         }
     }
+    /*special css to deal with landscape mode on mobile*/
+    @media screen and (max-width: 1000px) and (max-height: 500px){
+        .the-description-text-about-one-higher{
+            top: 8rem;
+        }
+        .the-description-text-about-one{
+            top: 80%;
+        }
+    }
+
+        /*Mobile Responsive CSS Medium*/
+        @media screen and (min-width: 321px) and (max-width: 375px) and (max-height: 860px) {
+            .west-coast-background{
+                top: 16rem;
+                height: 85%;
+                width: 90%;
+            }
+            .the-description-text-about-one{
+                width: 60%;
+            }
+        }
 }
