--- a/src/styles/AboutOne.scss
+++ b/src/styles/AboutOne.scss
@@ -284,7 +284,7 @@
         }
     }
     /*special css to deal with landscape mode on mobile*/
-    @media screen and (max-width: 1000px) and (max-height: 500px){
+    @media screen and (max-width: 1000px) and (max-height: 540px){
         .the-description-text-about-one-higher{
             top: 8rem;
         }
@@ -294,10 +294,20 @@
     }
 
         /*Mobile Responsive CSS Medium*/
-        @media screen and (min-width: 321px) and (max-width: 375px) and (max-height: 860px) {
+        @media screen and (min-width: 321px) and (max-width: 376px) and (max-height: 860px) {
             .west-coast-background{
                 top: 16rem;
-                height: 85%;
+                height: 70%;
+                width: 90%;
+            }
+            .the-description-text-about-one{
+                width: 60%;
+            }
+        }
+        @media screen  and (max-width: 321px) and (max-height: 860px){
+            .west-coast-background{
+                top: 16rem;
+                height: 50%;
                 width: 90%;
             }
             .the-description-text-about-one{
