--- a/src/styles/AboutTwo.scss
+++ b/src/styles/AboutTwo.scss
@@ -25,23 +25,25 @@
         align-content: center;
         flex-direction: row;
     }
+
     .col-header {
         float: left;
         width: 100%;
         text-align: center;
         height: 1rem;
     }
+
     .col-edu-main {
         float: left;
         width: 100%;
         text-align: center;
         height: 1rem;
-        background-color: palegreen;
     }
+
     .about-two-title {
         color: #ffffff !important;
         text-decoration: underline;
-        z-index: 1;
+        z-index: 70;
         font-weight: 400;
         font-style: normal;
         font-size: 2.5rem;
@@ -55,41 +57,35 @@
 
     }
 
-    .background-parent-about-two {
+   /* .background-parent-about-two {
         width: 100%;
         height: 100%;
         position: absolute;
-        bottom: 10%;
-        left: 44%;
-        /* Negative half of height. */
-        margin-left: -20%;
-    }
+        left: 0;
+        right: 0;
+        margin-left: auto;
+        margin-right: auto;
+        z-index: 1;
+    } */
 
     .waterloo-background {
         background: url('../assets/waterloo-background.svg');
         background-size: contain;
         background-repeat: no-repeat;
+        position: absolute;
+        ;
         text-align: center;
         align-self: center;
-        height: 40rem;
-        width: 60%;
-        bottom: 0%;
+        top: 1rem;
+        height: 100%;
+        width: 70%;
         z-index: 1;
         opacity: 0;
-    }
+        left: 0;
+        right: 0;
+        margin-left: auto;
+        margin-right: auto;
 
-
-    .the-description-text-education-one {
-        font-size: 1rem;
-        color: rgb(255, 255, 255);
-        line-height: 1.2;
-        text-align: right;
-        position: absolute;
-        width: $text-area-width+20;
-        right: $text-right - 25;
-        bottom: $text-lower-bottom;
-        z-index: 50;
-        background-color: #03030C;
     }
 
     .the-about-systems-header {
@@ -102,14 +98,38 @@
         font-style: normal;
         position: absolute;
         display: inline-block;
-        bottom: $text-lower-bottom+20;
-        right: $text-right - 25;
+        text-align: right;
         z-index: 40;
+        left: 0;
+        right: 0;
+        margin-left: auto;
+        margin-right: auto;
+        z-index: 70;
         background-color: #03030C;
-        padding-left: 20%;
-
-
+        width: 60%;
+        top: 42rem;
+        padding-bottom: 1rem;
+        padding-top: 1rem;
     }
+
+    .the-description-text-education-one {
+        margin-top: 2rem;
+        font-size: 1rem;
+        color: rgb(255, 255, 255);
+        line-height: 1.2;
+        text-align: justify;
+        position: absolute;
+        width: 60%;
+        left: 0;
+        right: 0;
+        margin-left: auto;
+        margin-right: auto;
+        z-index: 50;
+        background-color: #03030C;
+        top: 45rem;
+    }
+
+
 
     .waterloo-grad-year {
         font-size: 2rem;
@@ -119,12 +139,98 @@
         z-index: 1;
         font-weight: 400;
         font-style: normal;
-        width: 8rem;
+        width: 7rem;
         position: absolute;
-        display: inline-block;
-        bottom: $text-lower-bottom+50;
-        right: $text-right - 20;
+        text-align: right;
+        right: 30%;
+        margin-left: auto;
+        margin-right: auto;
+        top: 20rem;
         z-index: 60;
 
+    }
+    @media screen and (max-width: 520px){
+        .about-two-title{
+            top: 5rem;
+        }        
+    }
+    @media screen and (max-width: 1200px) {
+        .waterloo-grad-year{
+            right: 15%;
+        }
+        
+    }
+    @media screen and (max-width: 950px) and (min-width: 720px){
+        .waterloo-background{
+            top: 10rem;
+            height: 60%;
+            transform: scale(1.2);
+            
+        }
+        .the-description-text-education-one{
+            width: 50%;
+        }
+        .the-about-systems-header{
+            width: 40%;
+        }
+    }
+    @media screen and (max-width: 720px) and(min-width: 520px){
+        .waterloo-background{
+            top: 20rem;
+            transform: scale(1.4);
+            height: 60%;
+        }
+        .waterloo-grad-year{
+            right: 10%;
+        }
+        .the-description-text-education-one{
+            width: 50%;
+        }
+        .the-about-systems-header{
+            width: 40%;
+            padding-left: 0.5rem;
+            padding-right: 0.5rem;
+            border-radius: 0.75rem;
+        }
+    }
+    @media screen and (max-width: 520px) and(min-width: 320px){
+        .waterloo-background{
+            top: 20rem;
+            transform: scale(1.6);
+            height: 60%;
+        }
+        .waterloo-grad-year{
+            right: 10%;
+        }
+    }
+    @media screen and (max-width: 320px){
+        .waterloo-background{
+            top: 16rem;
+            transform: scale(1.8);
+            height: 20%;
+            width: 50%;
+        }
+        .waterloo-grad-year{
+            right: 10%;
+            display: none;
+        }
+        .the-description-text-education-one{
+            margin-top: 3rem;
+        }
+    }
+    @media screen and (max-width: 950px) and (max-height: 780px) and (min-width: 720px){
+        .waterloo-background{
+            width: 50%;
+            height: 40%;
+            transform: scale(2);
+
+        }
+    }
+    @media screen and (max-width: 720px) and (max-height: 520px) and (min-width: 520px){
+        .waterloo-background{
+            width: 30%;
+            height: 40%;
+            transform: scale(2);
+        }
     }
 }
