--- a/src/styles/AboutThree.scss
+++ b/src/styles/AboutThree.scss
@@ -2,51 +2,135 @@
 @import './Global.scss';
 
 .About-three {
-    @extend %universal-component-layout;
-}
+    .About-three {
+        @extend %universal-component-layout;
+    }
 
-$scale-size: 30%;
-$edge-distance: 5%;
-$text-area-width: 28.8125rem;
-$text-right: 50%;
-$text-top: 20%;
-$text-botton: 60%;
-$solution-text-right: 50%;
-$text-lower-bottom: 2%;
+    $scale-size: 30%;
+    $edge-distance: 5%;
+    $text-area-width: 28.8125rem;
+    $text-right: 50%;
+    $text-top: 20%;
+    $text-botton: 60%;
+    $solution-text-right: 50%;
+    $text-lower-bottom: 2%;
 
-.aboutthree-title {
-    color: #ffffff !important;
-    text-decoration: underline;
-    z-index: 1;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 2.5rem;
-    position: fixed;
-    display: inline-block;
-    top: 2rem;
-    right: $text-right;
-    margin-right: -2.5%;
-}
+    .row::after {
+        clear: both;
+        display: flex;
+        text-align: center;
+        margin: 0;
+        padding: 0;
+        justify-content: center;
+        align-content: center;
+        flex-direction: row;
+    }
 
+    .col-header {
+        float: left;
+        width: 100%;
+        text-align: center;
+        height: 1rem;
+    }
+
+    .about-3-col-main {
+        float: left;
+        width: 100%;
+        text-align: center;
+        height: 1rem;
+    }
+
+    .about-three-title {
+        color: #ffffff !important;
+        text-decoration: underline;
+        z-index: 70;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 2.5rem;
+        position: absolute;
+        display: inline-block;
+        top: 2rem;
+        left: 0;
+        right: 0;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    /*
 .background-parent-about-three {
     width: 100%;
     height: 100%;
-    position: fixed;
+    position: absolute;
     bottom: 6%;
     left: 40%;
-    /* Negative half of height. */
+    Negative half of height.
     margin-left: -20%;
 }
+*/
 
-.toolkit-background {
-    background: url('../assets/toolbox-background.svg');
-    background-size: contain;
-    background-repeat: no-repeat;
-    text-align: center;
-    align-self: center;
-    height: 55rem;
-    width: 700%;
-    bottom: 0%;
-    z-index: 1;
-    opacity: 0;
+    .toolkit-background {
+        background: url('../assets/toolbox-background.svg');
+        background-size: contain;
+        background-repeat: no-repeat;
+        position: absolute;
+        ;
+        text-align: center;
+        align-self: center;
+        top: 5%;
+        height: 100%;
+        width: 50%;
+        z-index: 1;
+        opacity: 0;
+        left: 0;
+        right: 0;
+        margin-left: auto;
+        margin-right: auto;
+
+    }
+    @media screen and (max-width: 520px){
+        .about-three-title{
+            top: 5rem;
+        }        
+    }
+    @media screen and (max-width:1080px) and (min-height:600px) and (max-height: 900px) {
+        .toolkit-background {
+            top: 10rem;
+            transform: scale(1.4);
+            height: 70%;
+        }
+    }
+
+    @media screen and (max-width:1080px) and (min-height:900px) and (max-height: 1250px) {
+        .toolkit-background {
+            top: 24rem;
+            transform: scale(1.6);
+        }
+    }
+
+    @media screen and (max-width:1080px) and (min-height:1250px) and (max-height: 1400px) {
+        .toolkit-background {
+            top: 34rem;
+            transform: scale(1.8);
+        }
+    }
+
+    @media screen and (max-width:1080px) and (min-height:1400px) {
+        .toolkit-background {
+            top: 44rem;
+            transform: scale(1.8);
+        }
+    }
+    /*mobile responsive css */
+    @media screen and (max-width: 520px) and (min-width:350px ){
+        .toolkit-background{
+            top: 24rem;
+            transform: scale(2);
+        } 
+    }
+    @media screen and (max-width: 350px) and (min-width:200px ){
+        .toolkit-background{
+            top: 25rem;
+            transform: scale(2);
+        } 
+    }
 }
