added responsive css for resume page

--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -95,6 +95,7 @@
     writing-mode: vertical-rl;
     cursor: vertical-text;
     margin-top: 20%;
+    margin-left: 3rem;
   }
 
   .Policy-Redirect a {
