--- a/src/styles/Resume.scss
+++ b/src/styles/Resume.scss
@@ -8,25 +8,69 @@ $text-right: 50%;
 $text-top: 20%;
 $text-botton: 60%;
 $solution-text-right: 50%;
-
-.resume-title {
-    color: #ffffff !important;
-    text-decoration: underline;
-    z-index: 30;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 2.5rem;
-    position: fixed;
-    display: inline-block;
-    top: 2rem;
-    right: $text-right;
-    margin-right: -15%;
-
-}
-
+.Resume{
 .Resume {
     @extend %universal-component-layout;
 }
+
+.row::after {
+    clear: both;
+    display: flex;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    justify-content: center;
+    align-content: center;
+    flex-direction: row;
+}
+
+.col-header {
+    float: left;
+    width: 100%;
+    text-align: center;
+    height: 1rem;
+}
+.header-icon-col{
+    float: left;
+    width: 100%;
+    text-align: center;
+    height: 1rem;
+}
+.col-icon-left{
+    float: left;
+    width: calc(100%/3);
+    text-align: center;
+    height: 1rem;
+}
+.col-icon-center{
+    float: left;
+    width: calc(100%/3);
+    text-align: center;
+    height: 1rem;
+}
+.col-icon-right{
+    float: left;
+    width: calc(100%/3);
+    text-align: center;
+    height: 1rem;
+}
+.resume-title {
+    color: #ffffff !important;
+    text-decoration: underline;
+    z-index: 70;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 2.5rem;
+    position: absolute;
+    display: inline-block;
+    top: 2rem;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
 
 .icon-headers {
     color: #ffffff !important;
@@ -34,46 +78,46 @@ $solution-text-right: 50%;
     z-index: 20;
     font-weight: 400;
     font-style: normal;
-    position: fixed;
+    position: absolute;
     display: inline-block;
     top: 0;
-    right: $text-right;
-    margin-right: -32%;
-    width: 65%;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
     height: 50%;
-    background-color: #03030C;
-    box-shadow: 0px 10px 15px 0px #03030C;
 
 }
 
 .skillset {
     position: inherit;
     display: inline-block;
-    top: 15%;
-    right: $text-right;
-    margin-right: -30%;
-    width: 60%;
-    height: 20%;
+    margin-top: 7rem;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .design-tools {
     position: inherit;
     display: inline-block;
-    top: 15%;
-    right: $text-right;
-    margin-right: -52%;
-    width: 60%;
-    height: 20%;
+    margin-top: 7rem;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .dev-tools {
     position: inherit;
     display: inline-block;
-    top: 15%;
-    right: $text-right;
-    margin-right: -78%;
-    width: 60%;
-    height: 20%;
+    margin-top: 7rem;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .skillset-icon {
@@ -131,12 +175,15 @@ $solution-text-right: 50%;
     font-size: 0.8rem;
 }
 
-.scrollable-resume {
+.scrollable-resume-col {
     height: auto;
-    width: $scale-size - 10;
     position: absolute;
-    left: 15%;
-    margin-top: 20rem;
+    width: 70%;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 22rem;
     margin-bottom: 4rem;
 }
 
@@ -178,15 +225,16 @@ $solution-text-right: 50%;
 
 }
 
-.work-section-description {
+.section-description {
     position: relative;
     z-index: 5;
     font-weight: 400;
     font-style: normal;
     font-size: 1rem;
     text-align: left;
-    padding-left: 5rem;
-    width: 60rem;
+    margin-left: 5rem;
+    margin-right: 5rem;
+    width: inherit;
     margin-top: 0;
 }
 
@@ -198,7 +246,8 @@ $solution-text-right: 50%;
     font-size: 1.5rem;
     text-align: left;
     padding-left: 5rem;
-    width: 60rem;
+    margin-right: 1rem;
+    width: inherit;
     margin-bottom: 0rem;
     margin-top: 1rem;
 }
@@ -223,7 +272,8 @@ $solution-text-right: 50%;
     font-size: 1.5rem;
     text-align: left;
     padding-left: 5rem;
-    width: 60rem;
+    margin-right: 1rem;
+    width: inherit;
     margin-bottom: 0rem;
     margin-top: 1rem;
 }
@@ -240,9 +290,10 @@ $solution-text-right: 50%;
     font-size: 1.5rem;
     text-align: left;
     padding-left: 5rem;
-    width: 60rem;
+    width: inherit;
     margin-bottom: 0rem;
     margin-top: 1rem;
+    margin-right: 1rem;
 }
 
 .free-text {
@@ -257,9 +308,10 @@ $solution-text-right: 50%;
     font-size: 1.5rem;
     text-align: left;
     padding-left: 5rem;
-    width: 60rem;
+    width: inherit;
     margin-bottom: 0rem;
     margin-top: 1rem;
+    margin-right: 1rem;
 }
 
 .gangl-text {
@@ -274,9 +326,10 @@ $solution-text-right: 50%;
     font-size: 1.5rem;
     text-align: left;
     padding-left: 5rem;
-    width: 60rem;
+    width: inherit;
     margin-bottom: 0rem;
     margin-top: 1rem;
+    margin-right: 1rem;
 }
 
 .systems-text {
@@ -286,4 +339,68 @@ $solution-text-right: 50%;
 .youtube-link:hover {
     text-decoration: underline;
     font-style: bold;
+}
+@media screen  and (max-width: 1080px ) and (min-width: 880px){
+    .dev-icon,.design-icon{
+        transform: scale(0.8);
+    }
+    .skillset-icon{
+        transform: scale(0.6);
+    }
+}
+@media screen and (max-width: 800px){
+    .resume-title{
+        top: 5rem;
+    } 
+    .icon-headers{
+        top: 2rem;
+    }
+
+}
+@media screen  and (max-width: 880px ) and (min-width: 550px){
+    .dev-icon,.design-icon{
+        transform: scale(0.6);
+    }
+    .skillset-icon{
+        transform: scale(0.6);
+    }
+    .skillset-text,.design-text,.dev-text{
+        width: inherit;
+        margin-left: 0.75rem;
+    }
+    .scrollable-resume-col{
+        width: 100%;
+    }
+}
+@media screen and (max-width: 680px){
+    .scrollable-resume-col{
+        top: 5rem;
+    }    
+}
+@media screen  and (max-width: 550px ){
+    .dev-icon,.design-icon{
+        transform: scale(0.6);
+
+    }
+    .skillset-icon{
+        transform: scale(0.6);
+    }
+    .skillset-text,.design-text,.dev-text{
+        width: inherit;
+        margin-left: 0.75rem;
+        text-align: center;
+    }
+    .scrollable-resume-col{
+        width: 100%;
+    }
+}
+@media screen and (max-width: 440px) {
+.icon-headers{
+    top: 4rem;
+}    
+.scrollable-resume-col{
+    top: 9rem;
+    width: 100%;
+}
+}
 }
