fixed big on about 2 screen with with bottpm paragraph was obstructed

--- a/src/styles/AboutTwo.scss
+++ b/src/styles/AboutTwo.scss
@@ -202,6 +202,9 @@
         .waterloo-grad-year{
             right: 10%;
         }
+        .the-description-text-education-one{
+            top: 48rem;
+        }
     }
     @media screen and (max-width: 320px){
         .waterloo-background{
