--- a/src/styles/Navigation.scss
+++ b/src/styles/Navigation.scss
@@ -3,7 +3,10 @@
 
 $buttonWidth: 6rem;
 $buttonHeight: 4rem;
-
+span {
+    color: #ffffff !important;
+    color: rgb(250, 250, 250);
+}
 .navigation-bar {
     @extend %universal-component-layout;
     font-size: 1.5rem;
@@ -11,9 +14,6 @@ $buttonHeight: 4rem;
     color: #ffffff;
 }
 
-div {
-    color: #ffffff !important;
-}
 
 ul {
     list-style-type: none;
@@ -25,7 +25,6 @@ ul {
     width: 100%;
     margin-right: 10%;
     color: #ffffff !important;
-    font-family: century-gothic, sans-serif;
     font-weight: 400;
     font-style: normal;
     z-index: 99;
@@ -34,6 +33,9 @@ ul {
 .home {
     float: left;
     margin-left: 2rem;
+    color: #ffffff;
+    color: rgb(250, 250, 250);
+    
 }
 
 .work {
@@ -47,6 +49,8 @@ li .navigation {
     margin-inline-end: 2rem;
     margin-block-start: 2rem;
     mix-blend-mode: difference;
+    z-index: 99;
+    -webkit-text-fill-color: #ffffff;
 }
 
 li {
@@ -71,8 +75,8 @@ li {
 }
 
 .navigation {
-    color: #ffffff;
-    text-decoration-color: #ffffff;
+    color: #ffffff !important;
+    text-decoration-color: #ffffff !important;
 }
 
 .more-button {
