--- a/src/styles/AboutTwo.scss
+++ b/src/styles/AboutTwo.scss
@@ -57,19 +57,9 @@
 
     }
 
-   /* .background-parent-about-two {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        left: 0;
-        right: 0;
-        margin-left: auto;
-        margin-right: auto;
-        z-index: 1;
-    } */
 
     .waterloo-background {
-        background: url('../assets/waterloo-background.svg');
+        background: url('../assets/rocket_educationV3.svg');
         background-size: contain;
         background-repeat: no-repeat;
         position: absolute;
@@ -105,7 +95,7 @@
         margin-left: auto;
         margin-right: auto;
         z-index: 70;
-        background-color: #03030C;
+        /*background-color: #03030C; */
         width: 60%;
         top: 42rem;
         padding-bottom: 1rem;
