--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -57,12 +57,6 @@
     margin-right: auto;
   }
 
-  /*@media only screen and (max-width: 570px) and (max-height: 350px){
-  .line-1{
-    margin-block-start: 4rem;
-    position: absolute;
-  }
-}*/
   /* Animation */
   .anim-typewriter {
 
@@ -180,21 +174,6 @@
       }
     }
   }
-  @media only screen and (max-width: 610px) and (min-width: 401px) {
-    .line-1{
-      overflow-x: hidden;
-    }
-    @keyframes typewriter {
-      from {
-        width: 0;
-      }
-
-      to {
-        width: 24rem;
-      }
-    }
-  }
-
   @media only screen and (max-width: 321px) {
     @keyframes typewriter {
       from {
@@ -211,18 +190,18 @@
     }
   }
 
-  @media screen and (max-width:570px) and (max-height:325px) {
+  @media screen and (max-width:610px){
     .line-1 {
-      transform: translateX(-40%);
+      width: 80%;
     }
 
     @keyframes typewriter {
       from {
-        width: 0;
+        
       }
 
       to {
-        width: 15rem;
+        
       }
     }
   }
