--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -86,7 +86,7 @@
   }
 
   .hidden-base-64 {
-    
+
     position: inherit;
     font-size: 0.8rem;
     writing-mode: vertical-rl;
@@ -134,22 +134,27 @@
       margin-top: 20rem;
     }
   }
+
   @media only screen and (max-width: 1170px) and (max-height:770px) {
     .hidden-base-64 {
       margin-top: 6rem;
     }
+
     z-index: 90;
   }
-  @media only screen and (max-width: 500px){
-    .hidden-base-64{
+
+  @media only screen and (max-width: 500px) {
+    .hidden-base-64 {
       display: none;
     }
   }
+
   /*THIS IS SPECIFIC FOR THE DECREASED TEXT SIZE LESS THAN 500PX*/
   @media only screen and (max-width: 850px) and (max-height: 800px) {
-    .line-1{
+    .line-1 {
       overflow-x: hidden;
     }
+
     @keyframes typewriter {
       from {
         width: 0;
@@ -160,10 +165,12 @@
       }
     }
   }
-  @media only screen and (max-width: 400px) and (max-height: 814px){
-    .line-1{
+
+  @media only screen and (max-width: 400px) and (max-height: 814px) {
+    .line-1 {
       overflow-x: hidden;
     }
+
     @keyframes typewriter {
       from {
         width: 0;
@@ -174,6 +181,7 @@
       }
     }
   }
+
   @media only screen and (max-width: 321px) {
     @keyframes typewriter {
       from {
@@ -190,19 +198,15 @@
     }
   }
 
-  @media screen and (max-width:610px){
+  @media screen and (max-width:610px) {
     .line-1 {
       width: 80%;
+      white-space: initial;
+      border-right: none;
     }
 
-    @keyframes typewriter {
-      from {
-        
-      }
-
-      to {
-        
-      }
+    .anim-typewriter{
+      animation: none;
     }
   }
 }
