--- a/src/styles/AboutOne.scss
+++ b/src/styles/AboutOne.scss
@@ -113,20 +113,6 @@
         margin-right: auto;
         top: 6rem;
     }
-
-    /*
-    .background-parent {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        margin-left: auto;
-        margin-right: auto;
-        text-align: center;
-    }*/
-
     .west-coast-background {
         background: url('../assets/about-background.svg');
         background-size: contain;
@@ -171,6 +157,8 @@
         text-align: justify;
         position: absolute;
         width: inherit;
+        margin-left: auto;
+        margin-right: auto;
         top: $text-top;
         z-index: 99;
     }
@@ -181,7 +169,7 @@
         line-height: 1.2;
         text-align: justify;
         position: absolute;
-        width: 75%;
+        width: 80%;
         left: 0;
         right: 0;
         margin-left: auto;
@@ -240,14 +228,16 @@
         }
 
         .the-description-text-about-one-higher {
-            width: 50%;
+            width: 80%;
             left: 0;
             right: 0;
             margin-left: auto;
             margin-right: auto;
 
         }
-
+        .the-description-text-about-one{
+            width: 80%;
+        }
         .vertical-text {
             display: none;
         }
@@ -259,7 +249,7 @@
             transform: scale(1.2);
         }
         .the-description-text-about-one{
-            width: 50%;
+            width: 80%;
         }
     }
     @media screen and (min-height:1401px) and (max-height: 1600px){
@@ -269,7 +259,7 @@
             transform: scale(1.2);
         }
         .the-description-text-about-one{
-            width: 50%;
+            width: 80%;
         }
     }
     /*Mobile Responsive CSS Large*/
@@ -280,7 +270,7 @@
             width: 80%;
         }
         .the-description-text-about-one{
-            width: 60%;
+            width: 80%;
         }
     }
     /*special css to deal with landscape mode on mobile*/
@@ -289,7 +279,7 @@
             top: 8rem;
         }
         .the-description-text-about-one{
-            top: 80%;
+            top: 70%;
         }
     }
 
@@ -301,7 +291,7 @@
                 width: 90%;
             }
             .the-description-text-about-one{
-                width: 60%;
+                width: 80%;
             }
         }
         @media screen  and (max-width: 321px) and (max-height: 860px){
@@ -311,7 +301,30 @@
                 width: 90%;
             }
             .the-description-text-about-one{
-                width: 60%;
+                width: 80%;
+            }
+        }
+        @media screen and (max-width: 800px){
+            .hidden-base-64-about{
+                display: none;
+            }
+        }
+        @media screen and (max-width: 420px){
+            .the-description-text-about-one{
+                bottom: 10%;
+            }
+        }
+        @media screen and (max-width: 376px){
+            .the-description-text-about-one{
+                bottom: 0%;
+            }
+        }
+        @media screen and (max-width: 325px){
+            .west-coast-background{
+                top: 20rem;
+            }
+            .the-description-text-about-one{
+                top: 10rem;
             }
         }
 }
