fixed bug on resume page with display isse of colors

--- a/src/styles/Resume.scss
+++ b/src/styles/Resume.scss
@@ -253,7 +253,7 @@ $solution-text-right: 50%;
 }
 
 .ffs-text {
-    color: #ff3333;
+    color: #ff3333 !important;
 }
 
 .para {
@@ -279,7 +279,7 @@ $solution-text-right: 50%;
 }
 
 .govt-text {
-    color: #ff9933;
+    color: #ff9933 !important;
 }
 
 .proj-free {
@@ -297,7 +297,7 @@ $solution-text-right: 50%;
 }
 
 .free-text {
-    color: #9933ff;
+    color: #9933ff !important;
 }
 
 .proj-gangl {
@@ -315,7 +315,7 @@ $solution-text-right: 50%;
 }
 
 .gangl-text {
-    color: #ffcc33;
+    color: #ffcc33 !important;
 }
 
 .edu-systems {
@@ -333,7 +333,7 @@ $solution-text-right: 50%;
 }
 
 .systems-text {
-    color: #3399ff;
+    color: #3399ff !important;
 }
 
 .youtube-link:hover {
