--- a/src/styles/Navigation.scss
+++ b/src/styles/Navigation.scss
@@ -3,10 +3,12 @@
 
 $buttonWidth: 6rem;
 $buttonHeight: 4rem;
+
 span {
     color: #ffffff !important;
     color: rgb(250, 250, 250);
 }
+
 .navigation-bar {
     @extend %universal-component-layout;
     font-size: 1.5rem;
@@ -14,15 +16,23 @@ span {
     color: #ffffff !important;
     text-emphasis-color: #ffffff;
 }
-.navigation-hidden{
+
+.navigation-hidden {
     animation: hide-navs;
     animation-duration: 0.3s;
     opacity: 0;
 }
+
 @keyframes hide-navs {
-    0% { opacity: 1;}
-    100% {opacity: 0;}
+    0% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
 }
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -57,7 +67,7 @@ li .navigation {
     margin-block-start: 2rem;
     mix-blend-mode: difference;
     z-index: 99;
-    -webkit-text-fill-color: #ffffff;    
+    -webkit-text-fill-color: #ffffff;
 }
 
 li {
@@ -98,7 +108,7 @@ li {
     height: $buttonWidth;
     background-repeat: no-repeat;
     background-position: center;
-    
+
 }
 
 .more-button:hover {
@@ -275,7 +285,8 @@ li {
     .back-button {
         bottom: 8rem;
     }
-    .next-button{
+
+    .next-button {
         bottom: 8rem;
     }
 }
@@ -308,5 +319,28 @@ li {
     .back-button,
     .next-button {
         bottom: 13.5rem;
+    }
+}
+@media only screen and (max-width: 1020px){
+    .back-button,.next-button,.more-button{
+        transform: scale(0.8);
+        background-color:#0D0830;
+        border-radius: 1rem;
+
+        
+    }
+    .back-button,.next-button{
+        height: 2.5rem;
+        width: 8rem;
+    }
+    .more-button{
+        width: 2.5rem;
+        height: 8rem;
+    }
+}
+@media only screen and (max-width: 400px){
+    .back-button,.next-button,.more-button{
+        transform: scale(0.6);
+
     }
 }
